--- a/themes/openy_themes/openy_rose/scss/modules/_branch.scss
+++ b/themes/openy_themes/openy_rose/scss/modules/_branch.scss
@@ -673,7 +673,7 @@ html.js {
   }
 
   h4 {
-    font-family: "Helvetica Neue LT W01_55 Roman", Verdana, sans-serif;
+    font-family: Verdana, sans-serif;
     font-size: 14px;
     text-transform: uppercase;
     line-height: 1.2;
@@ -992,7 +992,7 @@ html.js {
 .node--type-branch.node--view-mode-class-location {
   h2 {
     font-size: 15px;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: Verdana, sans-serif;
     font-weight: normal;
     margin: 0;
   }
@@ -1059,7 +1059,7 @@ html.js {
   }
 }
 .sidebar-card_h3 {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: Verdana, sans-serif;
     text-transform: uppercase;
     color: $default-grey;
     margin: 0 0 25px;
