--- a/themes/openy_themes/openy_rose/scss/modules/_paragraphs.scss
+++ b/themes/openy_themes/openy_rose/scss/modules/_paragraphs.scss
@@ -326,7 +326,7 @@
   }
 
   h2 {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: Verdana, sans-serif;
     text-transform: uppercase;
     color: $default-grey;
     margin: 0 0 25px;
