--- a/themes/openy_themes/openy_rose/scss/modules/_blog.scss
+++ b/themes/openy_themes/openy_rose/scss/modules/_blog.scss
@@ -81,7 +81,7 @@
       font-size: 14px;
       line-height: 1.28;
       letter-spacing: 2px;
-      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+      font-family: Verdana, sans-serif;
       position: absolute;
       left: 0;
       bottom: 0;
@@ -168,7 +168,7 @@
   position: relative;
 
   h2 {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: Verdana, sans-serif;
     text-transform: uppercase;
     color: $default-grey !important;
     margin: 0 0 25px;
