--- a/docroot/themes/custom/ymca/css/style.css
+++ b/docroot/themes/custom/ymca/css/style.css
@@ -12500,10 +12500,12 @@ body.show-new-mobile-menu .sidebar .dropdown.open > .dropdown-menu {
   padding-bottom: 70px;
   background: #fff;
 }
-body.show-new-mobile-menu .sidebar li > a.overview,
-body.show-new-mobile-menu .sidebar li.camps,
-body.show-new-mobile-menu .sidebar li.lineup,
-body.show-new-mobile-menu .sidebar li.tickets {
+body.show-new-mobile-menu .sidebar li > a.overview {
+  display: none !important;
+}
+body.show-new-mobile-menu #sidebar-nav li > .dropdown > ul.dropdown-menu > li.camps,
+body.show-new-mobile-menu #sidebar-nav li > .dropdown > ul.dropdown-menu > .sidebar li.lineup,
+body.show-new-mobile-menu #sidebar-nav li > .dropdown > ul.dropdown-menu > .sidebar li.tickets {
   display: none !important;
 }
 
