[YMCA-1768] mobile menu css hotfix

--- a/docroot/themes/custom/ymca/sass/misc/_sidebar.scss
+++ b/docroot/themes/custom/ymca/sass/misc/_sidebar.scss
@@ -363,9 +363,9 @@ body.show-new-mobile-menu {
   .sidebar li > a.overview {
     display: none !important;
   }
-  #sidebar-nav li>.dropdown > ul.dropdown-menu > li.camps,
-  #sidebar-nav li>.dropdown > ul.dropdown-menu > .sidebar li.lineup,
-  #sidebar-nav li>.dropdown > ul.dropdown-menu > .sidebar li.tickets {
+  #sidebar-nav > li.dropdown > ul.dropdown-menu > li.camps,
+  #sidebar-nav > li.dropdown > ul.dropdown-menu > li.lineup,
+  #sidebar-nav > li.dropdown > ul.dropdown-menu > li.tickets {
     display: none !important;
   }
 }
