--- a/docroot/themes/custom/ymca/sass/misc/_sidebar.scss
+++ b/docroot/themes/custom/ymca/sass/misc/_sidebar.scss
@@ -361,6 +361,11 @@ body.show-new-mobile-menu {
     background: #fff;
   }
   .sidebar li > a.overview {
-    display: none;
+    display: none !important;
+  }
+  #sidebar-nav > li.dropdown > ul.dropdown-menu > li.camps,
+  #sidebar-nav > li.dropdown > ul.dropdown-menu > li.lineup,
+  #sidebar-nav > li.dropdown > ul.dropdown-menu > li.tickets {
+    display: none !important;
   }
 }
