--- a/docroot/themes/custom/ymca/css/style.css
+++ b/docroot/themes/custom/ymca/css/style.css
@@ -579,9 +579,6 @@ body {
   background: #414141;
   -webkit-overflow-scrolling: touch;
 }
-.sidebar .news {
-  padding-bottom: 50px;
-}
 .sidebar.collapsing-out {
   -webkit-transition: visibility 0s .4s linear;
   -moz-transition: visibility 0s .4s linear;
@@ -12504,7 +12501,12 @@ body.show-new-mobile-menu .sidebar .dropdown.open > .dropdown-menu {
   background: #fff;
 }
 body.show-new-mobile-menu .sidebar li > a.overview {
-  display: none;
+  display: none !important;
+}
+body.show-new-mobile-menu #sidebar-nav > li.dropdown > ul.dropdown-menu > li.camps,
+body.show-new-mobile-menu #sidebar-nav > li.dropdown > ul.dropdown-menu > li.lineup,
+body.show-new-mobile-menu #sidebar-nav > li.dropdown > ul.dropdown-menu > li.tickets {
+  display: none !important;
 }
 
 .banner {
