--- a/docroot/themes/custom/ymca/sass/misc/_sidebar.scss
+++ b/docroot/themes/custom/ymca/sass/misc/_sidebar.scss
@@ -356,11 +356,16 @@ body.show-new-mobile-menu {
   .sidebar .active .jobs.nav-level-2:before, .sidebar .jobs.nav-level-2:before {
     content: '';
   }
-  .dropdown.open > .dropdown-menu {
+  .sidebar .dropdown.open > .dropdown-menu {
     padding-bottom: 70px;
     background: #fff;
   }
-  li > a.overview {
-    display: none;
+  .sidebar li > a.overview {
+    display: none !important;
+  }
+  #sidebar-nav > li.dropdown > ul.dropdown-menu > li.camps,
+  #sidebar-nav > li.dropdown > ul.dropdown-menu > li.lineup,
+  #sidebar-nav > li.dropdown > ul.dropdown-menu > li.tickets {
+    display: none !important;
   }
 }
