[YMCA-1791] Allow location menu to be rendered in mobile nav

--- a/docroot/themes/custom/ymca/sass/misc/_sidebar.scss
+++ b/docroot/themes/custom/ymca/sass/misc/_sidebar.scss
@@ -363,6 +363,7 @@ body.show-new-mobile-menu {
   .sidebar li > a.overview {
     display: none !important;
   }
+  #sidebar-nav > li.dropdown > ul.dropdown-menu > li.locations,
   #sidebar-nav > li.dropdown > ul.dropdown-menu > li.camps,
   #sidebar-nav > li.dropdown > ul.dropdown-menu > li.lineup,
   #sidebar-nav > li.dropdown > ul.dropdown-menu > li.tickets {
