--- a/docroot/themes/custom/ymca/css/style.css
+++ b/docroot/themes/custom/ymca/css/style.css
@@ -12503,6 +12503,7 @@ body.show-new-mobile-menu .sidebar .dropdown.open > .dropdown-menu {
 body.show-new-mobile-menu .sidebar li > a.overview {
   display: none !important;
 }
+body.show-new-mobile-menu #sidebar-nav > li.dropdown > ul.dropdown-menu > li.locations,
 body.show-new-mobile-menu #sidebar-nav > li.dropdown > ul.dropdown-menu > li.camps,
 body.show-new-mobile-menu #sidebar-nav > li.dropdown > ul.dropdown-menu > li.lineup,
 body.show-new-mobile-menu #sidebar-nav > li.dropdown > ul.dropdown-menu > li.tickets {
