--- a/docroot/modules/custom/ymca_camp_du_nord/templates/cdn-results-wrapper.html.twig
+++ b/docroot/modules/custom/ymca_camp_du_nord/templates/cdn-results-wrapper.html.twig
@@ -26,11 +26,17 @@
   <div class="container">
   {% for key, teaser in teasers %}
     <div class="cdn-calendar" data-index="{{ key }}">
-      <div class="description">
+      <div class="main-description">
         <a href="#" class="close-cal">x</a>
         <a href="#" class="view"><i class="fa fa-eye" aria-hidden="true"></i></a>
         <h2 class="title">{{ teaser.teaser['#title'] }}</h2>
         <div class="description">{{ teaser.teaser['#description'] }}</div>
+        {% if teaser.teaser['#panorama'] is not empty %}
+        <div class="panorama">
+          <a class="open-panorama">{{ 'View panorama'|t }}<i class="fa fa-eye"></i></a>
+          {{ teaser.teaser['#panorama'] }}
+        </div>
+        {% endif %}
         <p><strong>{{ 'Please select check in and check out dates*'|t }}</strong></p>
       </div>
       <div class="cdn-calendar-list">
