--- a/themes/openy_themes/openy_rose/css/styles.css
+++ b/themes/openy_themes/openy_rose/css/styles.css
@@ -1755,6 +1755,11 @@ body {
   overflow: hidden;
   position: relative;
 }
+@media (min-width: 62em) {
+  .banner {
+    height: 600px;
+  }
+}
 .banner--dark-blue {
   background-color: #0060af;
 }
@@ -1782,12 +1787,30 @@ body {
     width: calc(50% + 165px);
   }
 }
-.banner-image img {
+@media (min-width: 62em) {
+  .banner-image .media--image {
+    height: 600px;
+    overflow: hidden;
+    padding-bottom: 0 !important;
+    position: relative;
+  }
+}
+.banner-image img.media__element {
   width: 100% !important;
   height: auto !important;
 }
+@media (min-width: 62em) {
+  .banner-image img.media__element {
+    bottom: -100%;
+    top: -100%;
+    left: 0;
+    right: 0;
+    margin: auto;
+    position: absolute;
+  }
+}
 @media (min-width: 62em) and (max-width: 75em) {
-  .banner-image img {
+  .banner-image img.media__element {
     width: 120% !important;
   }
 }
@@ -4160,7 +4183,7 @@ html.js .branch__updates_queue__button {
   margin: 15px 0;
   position: relative;
   overflow: hidden;
-  height: 250px;
+  height: 305px;
 }
 .node--type-blog.node--view-mode-teaser img {
   height: auto;
