--- a/themes/openy_themes/openy_rose/scss/modules/_paragraphs.scss
+++ b/themes/openy_themes/openy_rose/scss/modules/_paragraphs.scss
@@ -422,14 +422,27 @@
   }
 }
 
+.paragraph--type--banner {
+  @include breakpoint($screen-desktop) {
+    height: 600px;
+  }
+
+  img.media__element {
+    @include breakpoint($screen-desktop) {
+      bottom: -100%;
+      top: -100%;
+      left: 0;
+      right: 0;
+      margin: auto;
+      position: absolute;
+    }
+  }
+}
+
 .banner {
   background-color: $yet-another-green;
   overflow: hidden;
   position: relative;
-
-  @include breakpoint($screen-desktop) {
-    height: 600px;
-  }
 
   // Color variations.
   &--dark-blue { background-color: $dark-blue; }
@@ -462,15 +475,6 @@
     img.media__element {
       width: 100% !important;
       height: auto !important;
-
-      @include breakpoint($screen-desktop) {
-        bottom: -100%;
-        top: -100%;
-        left: 0;
-        right: 0;
-        margin: auto;
-        position: absolute;
-      }
 
       @include breakpoint($screen-desktop $screen-lg-desktop) {
         width: 120% !important;
