Camp du nord variuos issues, add emergency contact functionality

--- a/docroot/modules/custom/ymca_camp_du_nord/templates/cdn-results-wrapper.html.twig
+++ b/docroot/modules/custom/ymca_camp_du_nord/templates/cdn-results-wrapper.html.twig
@@ -39,7 +39,7 @@
           </div>
         </div>
         {% endif %}
-        <p><strong>{{ 'Please select check in and check out dates*'|t }}</strong></p>
+        <p><strong>{{ 'Please select check in through check out dates*'|t }}</strong></p>
       </div>
       <div class="cdn-calendar-list">
         {{ teaser.calendar.list }}
