--- a/themes/openy_themes/openy_rose/css/styles.css
+++ b/themes/openy_themes/openy_rose/css/styles.css
@@ -3861,8 +3861,21 @@ html.js .branch__updates_queue__button {
 .node--type-branch.node--view-mode-sidebar-teaser .edit-class-popup, [class*="sidebar"]
 .node--type-branch.node--view-mode-class-location .edit-class-popup, [class*="sidebar"]
 .node--type-camp.node--view-mode-teaser .edit-class-popup {
+  background-color: #00aeef;
+  color: #ffffff;
   display: inline-block;
-  margin-left: 10px;
+  font-size: 15px;
+  font-weight: normal;
+  padding: 3px 15px;
+  text-transform: lowercase;
+  vertical-align: middle;
+}
+[class*="sidebar"] .node--type-facility.node--view-mode-teaser .edit-class-popup:hover, [class*="sidebar"]
+.node--type-branch.node--view-mode-teaser .edit-class-popup:hover, [class*="sidebar"]
+.node--type-branch.node--view-mode-sidebar-teaser .edit-class-popup:hover, [class*="sidebar"]
+.node--type-branch.node--view-mode-class-location .edit-class-popup:hover, [class*="sidebar"]
+.node--type-camp.node--view-mode-teaser .edit-class-popup:hover {
+  background-color: #0089d0;
 }
 .marker_tooltip .node--type-facility.node--view-mode-teaser, .marker_tooltip
 .node--type-branch.node--view-mode-teaser, .marker_tooltip
@@ -3983,6 +3996,19 @@ html.js .branch__updates_queue__button {
   letter-spacing: 2px;
   margin: 0;
   text-transform: uppercase;
+}
+.paragraph--type--class-location.paragraph--view-mode--default .edit-class-popup {
+  background-color: #00aeef;
+  color: #ffffff;
+  display: inline-block;
+  font-size: 15px;
+  font-weight: normal;
+  padding: 3px 15px;
+  text-transform: lowercase;
+  vertical-align: middle;
+}
+.paragraph--type--class-location.paragraph--view-mode--default .edit-class-popup:hover {
+  background-color: #0089d0;
 }
 
 .node--view-mode-full.node--type-facility {
