#683 Change camp_class variable to layout_class in templates

--- a/themes/openy_themes/openy_rose/templates/page/page.html.twig
+++ b/themes/openy_themes/openy_rose/templates/page/page.html.twig
@@ -45,7 +45,7 @@
  * @ingroup themeable
  */
 #}
-<div class="layout-container {{ camp_class }}">
+<div class="layout-container {{ layout_class }}">
 
   <div class="top-navs navbar-fixed-top visible-xs visible-sm" data-spy="affix" data-offset-top="1">
     <div class="nav-global navbar-default navbar">
