--- a/themes/openy_themes/openy_rose/scss/modules/_blog.scss
+++ b/themes/openy_themes/openy_rose/scss/modules/_blog.scss
@@ -38,7 +38,17 @@
       margin: 15px 0;
       position: relative;
       overflow: hidden;
-      height: 305px;
+      height: 315px;
+      @include breakpoint($screen-sm) {
+        height: 292px;
+      }
+      @include breakpoint($screen-md) {
+        height: 248px;
+      }
+      @include breakpoint($screen-lg) {
+        height: 305px;
+      }
+
     }
 
     img {
